--- a/trials.ipynb
+++ b/trials.ipynb
@@ -19,19 +19,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rajha\\anaconda3\\envs\\chatbot\\lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain import PromptTemplate\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "from langchain.vectorstores import Pinecone\n",
-    "from langchain.document_loaders import PyMuPDFLoader, DirectoryLoader\n",
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms import CTransformers"
+    "from langchain.llms import CTransformers\n",
+    "from pinecone import Pinecone, ServerlessSpec"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = \"f284c621-335b-4a06-8614-0df7def26671\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc = Pinecone(api_key = \"f284c621-335b-4a06-8614-0df7def26671\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_name = \"quickstart\"\n",
+    "\n",
+    "if index_name not in pc.list_indexes().names():\n",
+    "    pc.create_index(\n",
+    "        name=index_name,\n",
+    "        dimension=2,\n",
+    "        metric=\"cosine\",\n",
+    "        spec=ServerlessSpec(\n",
+    "            cloud='aws', \n",
+    "            region='us-east-1'\n",
+    "        ) \n",
+    "    ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract data from the PDF\n",
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data,\n",
+    "                    glob=\"*.pdf\",\n",
+    "                    loader_cls=PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_data = load_pdf(\"data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create text chunks\n",
+    "def text_split(extracted_data):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 20)\n",
+    "    text_chunks = text_splitter.split_documents(extracted_data)\n",
+    "\n",
+    "    return text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of my Chunk: 7020\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_chunks = text_split(extracted_data)\n",
+    "print(\"Length of my Chunk:\", len(text_chunks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
