--- a/trials.ipynb
+++ b/trials.ipynb
@@ -21,10 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rajha\\anaconda3\\envs\\chatbot\\lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "#Importing all the necessary libraries\n",
+    "\n",
     "from langchain import PromptTemplate\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
@@ -36,31 +47,24 @@
     "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms import CTransformers"
+    "from langchain.llms import CTransformers\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['PINECONE_API_KEY'] = \"f284c621-335b-4a06-8614-0df7def26671\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# API Key for Pinecone Vector Database\n",
+    "os.environ['PINECONE_API_KEY'] = \"f284c621-335b-4a06-8614-0df7def26671\"\n",
     "pc = Pinecone(api_key = \"f284c621-335b-4a06-8614-0df7def26671\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dimension': 384,\n",
+       " 'index_fullness': 0.0,\n",
+       " 'namespaces': {'': {'vector_count': 7764}},\n",
+       " 'total_vector_count': 7764}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# view index stats\n",
     "index.describe_index_stats()"
@@ -81,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,25 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extracted_data\n",
     "extracted_data = load_pdf(\"data/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extracted_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of my Chunk: 7020\n"
+     ]
+    }
+   ],
    "source": [
     "text_chunks = text_split(extracted_data)\n",
     "print(\"Length of my Chunk:\", len(text_chunks))"
@@ -140,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,27 +170,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
+       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
+       "  (2): Normalize()\n",
+       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False, show_progress=False)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "embeddings = download_hugging_face_embeddings()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "embeddings = download_hugging_face_embeddings()\n",
     "embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length 384\n"
+     ]
+    }
+   ],
    "source": [
     "query_result = embeddings.embed_query(\"Hello world\")\n",
     "print(\"Length\", len(query_result))"
@@ -180,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,9 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dimension': 384,\n",
+       " 'index_fullness': 0.0,\n",
+       " 'namespaces': {'': {'vector_count': 7764}},\n",
+       " 'total_vector_count': 7764}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# view index stats\n",
     "index.describe_index_stats()"
@@ -200,49 +247,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_pinecone.vectorstores.PineconeVectorStore at 0x28c973e6520>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#If we already have an index we can load it like this\n",
-    "docsearch=PineconeVectorStore.from_existing_index(index_name, embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "docsearch=PineconeVectorStore.from_existing_index(index_name, embeddings)\n",
     "docsearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"What are Allergies\"\n",
-    "\n",
-    "docs=docsearch.similarity_search(query, k=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Prompt Template\n",
     "prompt_template=\"\"\"\n",
     "Use the following pieces of information to answer the user's question.\n",
     "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
@@ -257,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,10 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Configuring Llama LLM for generating output response\n",
     "llm=CTransformers(model=\"model\\llama-2-7b-chat.ggmlv3.q4_0.bin\",\n",
     "                  model_type=\"llama\",\n",
     "                  config={'max_new_tokens':512,\n",
@@ -279,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,6 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Passing Input Prompt and generating Response\n",
     "while True:\n",
     "    user_input=input(f\"Input Prompt:\")\n",
     "    result=qa({\"query\": user_input})\n",
