--- a/trials.ipynb
+++ b/trials.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Necessary Libraries Imported"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -49,6 +56,13 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import CTransformers\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pinecone Vector Database - API & Indexing"
    ]
   },
   {
@@ -98,6 +112,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading PDF using pypdf Library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -122,6 +143,13 @@
    "source": [
     "# extracted_data\n",
     "extracted_data = load_pdf(\"data/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Divided the data into chunks and stored them in Vector DB"
    ]
   },
   {
@@ -268,6 +296,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prompt Template "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -294,6 +329,13 @@
    "source": [
     "PROMPT=PromptTemplate(template=prompt_template, input_variables=[\"context\", \"question\"])\n",
     "chain_type_kwargs={\"prompt\": PROMPT}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Llama LLM for response generation"
    ]
   },
   {
@@ -334,6 +376,13 @@
     "    user_input=input(f\"Input Prompt:\")\n",
     "    result=qa({\"query\": user_input})\n",
     "    print(\"Response : \", result[\"result\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image showing Input Prompt and Responses "
    ]
   },
   {
